# NotifyStack-OSS

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  docker.yml  security.yml
backend/app/: main.py
backend/app/core/config/: settings.py
backend/app/modules/auth/api/: router.py
backend/app/modules/auth/services/: authorization.py  security.py
backend/app/modules/events/api/: router.py
backend/app/modules/events/schemas/: common.py
backend/app/modules/events/services/: event_service.py
backend/app/modules/notifications/api/: router.py
backend/app/modules/notifications/schemas/: common.py
backend/app/modules/notifications/services/: notification_service.py
backend/app/modules/organizations/api/: router.py
backend/app/modules/organizations/schemas/: common.py
backend/app/modules/projects/api/: router.py
backend/app/modules/projects/schemas/: common.py
backend/app/modules/providers/api/: router.py
backend/app/modules/providers/services/: providers.py
backend/app/shared/database/: base.py  models.py  repositories.py  session.py
backend/app/shared/events/: audit.py
backend/app/shared/exceptions/: handlers.py  http.py
backend/app/shared/middleware/: tenant.py
backend/app/shared/queue/: base.py  dependencies.py  nats_queue.py
backend/tests/: conftest.py  test_additional_coverage.py  test_auth_api.py  test_authorization.py  test_event_trigger_api.py  test_template_service.py  test_tenant_middleware.py  test_users_api.py
(+6 files in other folders)
